...
  final confirm = await CustomConfirmDialog.show(
    context: context,
    type: DialogType.warning, 
    title: 'Keluar dari Aplikasi',
    message: 'Apakah Anda yakin ingin keluar dari aplikasi? Anda harus login kembali untuk mengakses aplikasi.',
    cancelText: 'Batal',
    confirmText: 'Ya, Keluar',
  );

  if (confirm == true) {
    AuthService().signOut();
    if (mounted) {
      context.replace('/login'); 
...
                        color: _primaryColor.withOpacity(0.7),
                        onTap: () => context.push('/warga/profil/about'),
                      ),
                      _buildMenuItem(
                        context,
                        icon: Icons.logout,
                        label: 'Keluar',
                        color: _logoutColor,
                        onTap: () => _onLogout(context),
                        ),
                      ],
                  ),
                  const SizedBox(height: 30),
...
